--- a/flutter_rocks_movie_details/pubspec.yaml
+++ b/flutter_rocks_movie_details/pubspec.yaml
@@ -24,6 +24,18 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - images/banner.png
+    - images/poster.png
+    - images/1.png
+    - images/2.png
+    - images/3.png
+    - images/4.png
+    - images/ellie.png
+    - images/eric.png
+    - images/jenny.png
+    - images/kevin.png
+    - images/louis.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
